# sacco_management

./: .gitignore  MANIFEST.in  README.md  license.txt  pyproject.toml  setup.py
sacco_management/: CALCULATE_LOAN_SUMMARY_FIX.md  COMPLETE_FIX_GUIDE.md  COMPLETE_NAMING_FIX_SUMMARY.md  DASHBOARD_CHART_INSTALLATION_GUIDE.md  FINAL_MIGRATION_FIX_FINE_PAYMENT.md  FIX_SCRIPT_GUIDE.md  KENYAN_QUICKSTART.md  KENYAN_SACCO_ADVANCED_FEATURES.md  KENYAN_SACCO_IMPLEMENTATION_SUMMARY.md  MEETING_VOTING_FIX.md  MIGRATION_FIX_SUMMARY.md  NAMING_CONVENTION_FIX.md  PERFORMANCE_IMPLEMENTATION_SUMMARY.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  QUICK_REFERENCE_PERFORMANCE.md  __init__.py  fix_init_files.py  fix_sacco_management.py  hooks.py  modules.txt  patches.txt  validate_class_names.py
sacco_management/sacco/: __init__.py
sacco_management/sacco/api/: __init__.py  api_docs.py  api_utils.py  loan_api.py  member_api.py  savings_shares_api.py
sacco_management/sacco/fixtures/: number_cards.json  roles.json  workflows.json
sacco_management/sacco/patches/: add_performance_indexes.py
sacco_management/sacco/security/: __init__.py  field_security.py  permission_sets.py
sacco_management/sacco/setup/: __init__.py  create_dashboard_charts.py  install.py
sacco_management/sacco/tasks/: __init__.py  daily.py  monthly.py  weekly.py
sacco_management/sacco/utils/: __init__.py  fine_utils.py  (+9 more)
sacco_management/tests/: TESTING_GUIDE.md  __init__.py  run_tests.py  test_config.py  test_integration.py  test_loan.py  test_member.py  test_performance.py  test_savings_shares.py  test_utils.py
(+214 files in other folders)
