[project]
name = "sacco_management"
authors = [
    { name = "SACCO Developer", email = "developer@sacco.com"}
]
description = "Complete SACCO Management System for ERPNext"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "frappe"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0"
